# stx-governance

./: .gitignore  .gitreview  .zuul.yaml  README.md  README.rst  setup.cfg  starlingX_governance.rst  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst
doc/source/_exts/: members.py  projects.py
reference/: stx_charter.rst
reference/tsc/: house.rst  index.rst  members  projects.yaml  stx_charter.rst
reference/tsc/projects/: index.rst
tools/: check_projects_yaml_alphabetized.sh
