[metadata]
name = starlingx-governance
version = 2018.1
summary = StarlingX Governance Documents
description-file =
    README.rst
author = StarlingX TSC
author-email = starlingx-discuss@lists.starlingx.io
home-page = http://www.starlingx.io/

[files]
packages =
    starlingx_governance

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1

[pbr]
warnerrors = True

[flake8]
ignore = E501,E226,H405